--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue-project",
+  "name": "personasuxd",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^1.3.4",
+    "vee-validate": "^4.7.4",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
   },
